# satyrographos-package-index-v2

./: .gitignore  LICENSE  README.md  gatsby-config.js  gatsby-node.js  package-lock.json  package.json
.github/workflows/: update.yaml
repo2json/: .gitignore  Makefile  dune  dune-project  repo2json.ml  repo2json.opam
scripts/: add-command-info.rb  add-github-repo-info.rb  post-update-info-to-slack.rb  remove-pdf-id.rb  reset.sh  update-check.sh
src/components/: common.js  layout.js  package-search.js  search-form.js
src/data/: packages.json  snapshots.json
src/pages/: index.js  packages.js  snapshots.js
src/templates/: package-snapshots.js  package.js  rev-deps.js  snapshot.js
static/docs/arrows-doc/: examples.saty
static/docs/csvtable-doc/: csvtable-manual-ja
static/docs/karnaugh-doc/: examples.saty  local.satyh
static/docs/matrix-doc/: README-ja.md  README.md
static/docs/matrix-doc/example/: main.saty
static/docs/ncsq-doc/: ncsq-example.saty
