opam-version: "2.0"
name: "repo2json"
version: "1.0"
synopsis: "Generate JSON-formatted data of satyrographos-repo"
maintainer: "Daiki Matsunaga"
authors: "Daiki Matsunaga"
license: "0BSD"
homepage: "https://github.com/matsud224/satyrographos-package-index-v2"
bug-reports: "https://github.com/matsud224/satyrographos-package-index-v2/issues"
depends: [
  "ocaml" {>= "4.10.0"}
  "dune"
  "core" {>= "0.14.1"}
  "yojson" {= "1.7.0"}
  "opam-file-format" {= "2.1.2"}
  "opam-core" {= "2.1.0~beta4"}
]
